fix footer not covering the whole screen

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ p {
 	background-color: #d8d8d8;
 	position: fixed;
 	bottom: 0;
+	width: 100%;
 }
 #header {
 	background-color: #c34614;
